/*
 * $Id: ChangeLog,v 1.3405 2004/09/05 23:46:19 oh1 Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/
2004-09-06 12:30 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rtl/filesys.c
    * update hb_fsLock() to support SHARED locks for WinNt/2000/XP

2004-09-06 01:30 UTC+0200 Henryk Olkowski <oh1@op.pl>
  * xharbour/source/ct/ctwin.prg
    ! fixed problem with @ ... SAY and Quot()/QQuot()
      after SET PRINTER TO (file)

2004-09-06 11:40 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /source/rtl/version.c not /source/rtl/tprinter.c
    + added HB_FUNC( OS_ISWINNT )
   Correct previous changelog entry

2004-09-06 10:55 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
  * /include/hbaph.h
    + extern BOOL hb_iswinnt(void) ;
  * /common/hbver.c
    + BOOL hb_iswinnt(void) ;
  * /source/rtl/tprinter.c
    + isLegacyDevice( LPTSTR pPrinterName)
    - BOOL isWinNt() - replaced with calls to hb_iswinnt()
    * replace untidy code with call to isLegacyDevice()
  * /source/rtl/tprinter.c
    + added HB_FUNC( OS_ISWINNT )

2004-09-04 11:58 UTC-0800 Ron Pinkas <ron at xharbour.com>
  * source/pp/ppcore.c
    ! Fixed bug in ConvertPatterns() when Match Marker was later used in linger form (with some suffix letter)

2004-09-03 18:45 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * xharbour/Makefile
    * replaced / with \ for dos and win32 to fix an error msg
    * at the end of make -s install

2004-09-03 18:00 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
  * xharbour/source/rdd/dbffpt/dbffpt1.c
   ! fixed the buggy merge I've done (with some CVS help ;-)) from my and
     Peter changes - I hope now it's OK.

2004-09-03 17:55 UTC+0200 Lorenzo Fiorini <lorenzo_fiorini/at/teamwork.it>
  * xharbour/source/compiler/gencobj.c
    * now you can you set HB_CFG_FILE=mycfg.conf. It is useful if you use