@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.3405 2004/09/05 23:46:19 oh1 Exp $
+ * $Id: ChangeLog,v 1.3406 2004/09/06 00:23:49 peterrees Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,11 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2004-08-06 15:25 UTC+0200 Przemyslaw Czerpak (druzus/at/priv.onet.pl)
+  * xharbour/source/rdd/dbfcdx/dbfcdx1.c
+    * added function name to error message
+
 2004-09-06 12:30 UTC+1200 Peter Rees <peter(AT)rees.co.nz>
   * /source/rtl/filesys.c
     * update hb_fsLock() to support SHARED locks for WinNt/2000/XP
